--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "lru-cache": "^11.2.1",
     "lucide-react": "^0.542.0",
     "next": "14.2.32",
-    "next-auth": "^4.24.11",
+    "next-auth": "^4.24.7",
     "otplib": "^12.0.1",
     "path-browserify": "^1.0.1",
     "pdfkit": "^0.15.0",
@@ -131,6 +131,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.2",
     "@faker-js/faker": "^10.0.0",
     "@playwright/test": "^1.55.0",
     "@prisma/client": "^6.15.0",
@@ -164,6 +165,7 @@
     "dotenv-cli": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.32",
+    "isomorphic-dompurify": "^2.26.0",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
     "jest-junit": "^16.0.0",
